Add resources needed to run the engine